Basket and Purchase

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "KonusarakOgran@gmail.com",
+    "Issuer": "KonusarakOgran@gmail.com",
+    "AccessTokenExpiration": "120",
+    "SecurityKey": "SuperSecurityKeySuperSecurityKeySuperSecurityKey"
+  },
   "ConnectionStrings": {
     "SqlConnection": "Data Source=DESKTOP-VORNP2E;Initial Catalog=KonusarakOgrenDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
